--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <header></header>
     <section></section>
-    <section class="Saror-section"></section>
+    <section class="Sardor-section"></section>
 </body>
 </html>
