--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <header></header>
-    <section></section>
+   <div class="first-section">
+    <header>
+        
+    </header>
+   </div>
     <section class="Sardor-section"></section>
 </body>
 </html>
