--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
    <div class="first-section">
     <header>
-        
+        <div class="container">
+            
+        </div>
     </header>
    </div>
     <section class="Sardor-section"></section>
