--- a/index.html
+++ b/index.html
@@ -5,14 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
    <div class="first-section">
     <header>
         <div class="container">
-            
+            <div class="header-box">
+                <div class="a-box">
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">SERVICES</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">FEATURES</a></li>
+                        <li><a href="">BOOK NOW</a></li>
+                    </ul>
+                </div>
+                <div class="logo-box">
+                    <img src="./img/logo.png" alt="">
+                </div>
+                <div class="contact-box">
+                    <p>Want a free estimate now?</p>
+                    <div class="tel-box">
+                        <img src="./img/tel.png" alt="">
+                        <a href="tel:+998 97 260 19">+998 97 260 19</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
+    <div class="first-box">
+        <div class="get-box">
+            
+        </div>
+       </div>
    </div>
     <section class="Sardor-section"></section>
 </body>
