Ваше сообщение о коммите

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div class="first-section">
+   <div class="first-section"> 
     <header>
         <div class="container">
             <div class="header-box">
@@ -36,10 +36,58 @@
     </header>
     <div class="first-box">
         <div class="get-box">
-            
+         <h2>GET A QUOTE INSTANTLY</h2>
+         <p>Aliquip ex ea commodo consequat placeat facere possimus, omnis <br>voluptas assumenda est.</p>
+         <form action="">
+            <input type="text" placeholder="Enter your name">
+            <input type="email" placeholder="Enter your email">
+            <input type="number" placeholder="How many room">
+                <input type="date" placeholder="Chose date">
+                        <button>Booking now</button>
+         </form>
         </div>
+        <div class="prof-box">
+            <h1>PROFESSIONAL YOUR <br>
+                HOME CLEANING <br>SERVICES</h1>
+                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis autem vel eum iure <br> reprehenderit qui in ea voluptate</p>
+                <div class="blur">
+                    <img src="./img/dress.png" alt="" class="img1">
+                    <img src="./img/carpet.png" alt="" class="img1">
+                    <img src="./img/car.png" alt="" class="img1">
+                    <img src="./img/kitchen.png" alt="" class="img2">
+                </div>
+                <div class="rec-box">
+                    <div class="rec1"></div>
+                    <div class="rec2"></div>
+                    <div class="rec2"></div>
+                </div>
+           </div>
        </div>
    </div>
-    <section class="Sardor-section"></section>
+   <div class="second-section">
+    <div class="container">
+       <div class="second-box">
+        <div class="img-box">
+            <img src="./img/cactus.png" alt="" class="cac">
+            <img src="./img/supur.png" alt="" class="supur">
+        </div>
+        <div class="about-box">
+            <h1>ABOUT FIRST CLEANING</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have >suffered alteration in some form, by injected humour, or randomised words which don't look  even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text</p>
+           <div class="chec-box">
+            <input type="checkbox" id="sat">
+            <label for="sat">Satisfied customers lorem ipsum</label>
+            <input type="checkbox" id="sat">
+            <label for="sat">Fast Cleaning</label>
+            <input type="checkbox" id="sat">
+            <label for="sat">Number One Security</label>
+            <input type="checkbox" id="sat">
+            <label for="sat">Location In New York</label>
+           </div>
+           <img src="./img/naush.png" alt="" class="naush">
+        </div>
+       </div>
+    </div>
+   </div>
 </body>
 </html>
